--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
       Dad| Mom|Brother | Sister
     </div>
    </div>
+
   </center>
   </h3>
   <br><br>
+  <p class="btn btn-warning result_para_tag"> Object :
+    <span id="result_object_name"></span>
+  </p>
+<br><br>
+  <p class="btn btn-warning result_para_tag"> Accuracy :
+    <span id="result_object_accuracy"></span>
+  </p>
 </center>
 
 <script src="main.js"></script>
